--- a/public/index.html
+++ b/public/index.html
@@ -63,48 +63,29 @@
             </div>
             <div class="card-body">
               <div
+                id="chatBox"
                 class="overflow-x-hidden overflow-y-scroll clearfix"
                 style="height: 75vh"
-              >
-                <div class="float-start">
-                  <div class="bg-white py-1 px-3 rounded-4">
-                    <p class="m-0">سلام خسته نباشید</p>
-                  </div>
-                  <div class="px-1 text-black-50">
-                    <!-- این برای اینکه هموز پیام خوانده نشده -->
-                    <i class="bi bi-check2"></i>
-                    <!-- این پایینی برای اینکه پیام خوانده شده -->
-                    <!-- <i class="bi bi-check2-all text-warning"></i> -->
-                    <small class="px-2">۱۴۰۲/۱۰/۱۱, ۱۹:۵۳:۵۲</small>
-                  </div>
-                </div>
-                <br />
-                <div class="float-end">
-                  <div class="bg-success-subtle py-1 px-3 rounded-4">
-                    <p class="m-0">سلام وقت بخیر جناب</p>
-                  </div>
-                  <div class="px-1 text-black-50">
-                    <small class="px-2">۱۴۰۲/۱۰/۱۱, ۱۹:۵۳:۵۲</small>
-                  </div>
-                </div>
-                <br />
-              </div>
+              ></div>
             </div>
             <form
+              id="chatForm"
               class="card-footer rounded-4 bg-primary-subtle border-0 d-flex align-items-center gap-1 justify-content-between"
             >
               <div class="w-75">
                 <input
                   type="text"
+                  name="message"
+                  id="messageInput"
                   class="form-control border-0 shadow-none bg-transparent"
                   placeholder="پیام"
                 />
               </div>
               <div class="d-flex gap-1">
-                <button class="btn btn-outline-primary rounded-4 border-0">
-                  <i class="bi bi-paperclip"></i>
-                </button>
-                <button class="btn btn-outline-primary rounded-4 border-0">
+                <button
+                  type="submit"
+                  class="btn btn-outline-primary rounded-4 border-0"
+                >
                   <i class="bi bi-send"></i>
                 </button>
               </div>
@@ -116,8 +97,6 @@
 
     <script src="/vendor/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
     <script src="/vendor/socket.io-4.7.4/socket.io.min.js"></script>
-    <script>
-      const socket = io();
-    </script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
