--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                     <i class="bi bi-circle-fill text-warning"> </i>
                     <!-- این برای آفلاینه -->
                     <!-- <i class="bi bi-circle-fill text-danger"> </i> -->
-                    آنلاین
+                    <small id="feedback">آنلاین</small>
                   </small>
                 </div>
               </div>
